examples/syntaxErrors/errorParsingCopatternTuple.lcp
A = ()

main : A -> A
main x = ()
main main = ()
(main, main) = ()
